--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="layout">
 		<header>
-			<h1>Mi E-Commerce</h1>
+			<h1>My Maki Carro</h1>
 			<nav>
 				<ul>
 					<li><a href="../index.html">Inicio</a></li>
@@ -25,9 +25,9 @@
 			<section id="contenedor-carrito">
 				<!-- Productos del carrito -->
 			</section>
-			<div class="acciones-carrito">
-				<!-- Botones de eliminar y filtrar compra se agrega desde JS -->
-			</div>
+			<section id="acciones-carrito">
+				<!-- Botones de eliminar -->
+			</section>
 			<section id="resumen-carrito">
 				<!-- Aca ira el resumen del carrito -->
 			</section>
