--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="layout">
 		<header>
-			<h1>Mi E-commerce</h1>
+			<h1>Maki Maquillista</h1>			
 			<nav>
 				<ul>
 					<li><a href="#">Inicio</a></li>
@@ -28,7 +28,7 @@
 		</main>
 
 		<footer>
-			<p>&copy; 2025 Mi E-Commerce. Todos los derechos reservados.</p>
+			<p>&copy; 2025 Mi E-Commerce.</p>
 		</footer>
 	</div>
 	<script src="./js/app.js"></script>
